# md-2-html

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-issue.md
assets/: styles.css
md_2_html/: __init__.py  converter.py  gui.py  main.py  md_parser.py
md_2_html/assets/: icon.xbm  styles.css
md_2_html/gui/: __init__.py  gui.py
md_2_html/lexer/: __init__.py  _lexer.py  _token.py
md_2_html/resources/: document.html
mdtohtml/: converter.py  gui.py  lexer.py  main.py  md_parser.py
resources/: document.html  document.md
src/: converter.py  exceptions.py  file_selector.py  gui.py  html_tag.py  lexer.py  main.py  md_parser.py  styles.css
tests/: test_md_2_html.py  test_mdtohtml.py
