[tool.poetry]
name = "md-2-html"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
# include static files
include = ["md_2_html/assets/*", "md_2_html/resources/*"]

[tool.poetry.dependencies]
python = "^3.8"
html5print = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
